--- a/fwpt-view/Web.config
+++ b/fwpt-view/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0"?>
 <configuration>
   <connectionStrings>
     <add name="ApplicationServices" connectionString="Provider=MSDAORA; Data Source=10.17.5.86:1521/smgeoracledb;User ID=dxsjpt;" providerName="System.Data.OracleClient" />
@@ -7,11 +7,20 @@
     <add key="webpages:Enabled" value="true" />
   </appSettings>
   <system.web>
-    <compilation debug="true"  targetFramework="4.0" >
-   
+    <httpHandlers>
+      <add path="Reserved.ReportViewerWebControl.axd" verb="*" type="Microsoft.Reporting.WebForms.HttpHandler, Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91"
+        validate="false" />
+    </httpHandlers>
+    <compilation debug="true" targetFramework="4.0">
       <assemblies>
         <add assembly="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089" />
+        <add assembly="Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845DCD8080CC91" />
+        <add assembly="Microsoft.ReportViewer.Common, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845DCD8080CC91" />
+        <add assembly="Microsoft.Build.Framework, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A" />
       </assemblies>
+      <buildProviders>
+        <add extension=".rdlc" type="Microsoft.Reporting.RdlBuildProvider, Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" />
+      </buildProviders>
     </compilation>
     <membership>
       <providers>
@@ -35,5 +44,18 @@
   </system.web>
   <system.webServer>
     <modules runAllManagedModulesForAllRequests="true" />
+    <validation validateIntegratedModeConfiguration="false" />
+    <handlers>
+      <add name="ReportViewerWebControlHandler" preCondition="integratedMode" verb="*" path="Reserved.ReportViewerWebControl.axd" type="Microsoft.Reporting.WebForms.HttpHandler, Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" />
+    </handlers>
+    <security>
+      <requestFiltering allowDoubleEscaping="true">
+        <!--<fileExtensions>
+          <add fileExtension=".mdb" allowed="true"/>
+        </fileExtensions>-->
+        
+      </requestFiltering>
+      
+    </security>
   </system.webServer>
 </configuration>
